# agent_experiments

./: .env_template  .gitignore  README.md  makefile  prompt.txt  pyproject.toml
src/agent_course/: alfred.py  alfred_2.py  alfred_multiagent.py  menu.py  playlist.py  preparation_time.py
src/agent_course/tools/: cargo_transfer.py  search.py
src/agent_experiments/: __init__.py  tracing.py
src/agent_experiments/code_diff/: main.py
src/agent_experiments/gui_agent/: main.py
src/agent_experiments/tools/: todo.py
